# xllm

xllm/: xllm.cpp
xllm/core/common/: global_flags.h  options.cpp  options.h
xllm/core/framework/model/: model_input_params.h
xllm/core/kernels/: ops_api.cpp  param.h
xllm/core/kernels/cuda/: batch_decode.cpp  batch_prefill.cpp  cuda_ops_api.h
xllm/core/layers/common/: CMakeLists.txt  attention_metadata.cpp  attention_metadata.h  attention_metadata_builder.cpp  attention_metadata_builder.h  qwen2_vision_attention.cpp
xllm/core/layers/common/tests/: deepseek_v2_decoder_layer_tests.cpp
xllm/core/layers/cuda/: attention.cpp  flashinfer_planinfo.cpp  flashinfer_planinfo.h  flashinfer_workspace.cpp  flashinfer_workspace.h  xattention.cpp
xllm/core/layers/ilu/: attention.cpp
xllm/core/layers/mlu/: attention.cpp
xllm/core/layers/npu_torch/: attention.cpp
xllm/core/runtime/: CMakeLists.txt  acl_graph_executor_impl.cpp  cuda_graph_executor_impl.cpp  cuda_graph_executor_impl.h  executor_impl_factory.cpp  llm_worker_impl.cpp
xllm/core/scheduler/profile/: profile_manager.cpp
xllm/models/llm/: deepseek_mtp.h  deepseek_v2.h  llm_model_base.h  qwen3.h  qwen3_moe.h
